[package]
name = "codspeed-runner"
version = "4.4.2-beta.1"
edition = "2024"
repository = "https://github.com/CodSpeedHQ/runner"
publish = false

[[bin]]
name = "codspeed"
path = "src/main.rs"


[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["env", "color"] }
itertools = { workspace = true }
lazy_static = "1.4.0"
log = { workspace = true }
rand = "0.8.5"
regex = "1.10.2"
semver = "1.0"
reqwest = { version = "0.11.22", features = [
    "json",
    "stream",
    "native-tls-vendored",
] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
url = "2.4.1"
sha256 = "1.4.0"
tokio = { version = "1", features = ["macros", "rt"] }
tokio-tar = "0.3.1"
tokio-util = "0.7.16"
md5 = "0.7.0"
base64 = "0.21.0"
async-compression = { version = "0.4.5", features = ["tokio", "gzip"] }
simplelog = { version = "0.12.1", default-features = false, features = [
    "termcolor",
] }
tempfile = "3.10.0"
git2 = "0.20.2"
nestify = "0.3.3"
gql_client = { git = "https://github.com/CodSpeedHQ/gql-client-rs" }
serde_yaml = "0.9.34"
sysinfo = { version = "0.33.1", features = ["serde"] }
indicatif = "0.17.8"
console = "0.15.8"
async-trait = "0.1.82"
libc = { workspace = true }
bincode = "1.3.3"
object = "0.36.7"
linux-perf-data = "0.11.0"
debugid = "0.8.0"
memmap2 = "0.9.5"
nix = { version = "0.29.0", features = ["fs", "time", "user"] }
futures = "0.3.31"
runner-shared = { path = "crates/runner-shared" }
memtrack = { path = "crates/memtrack", default-features = false }
ipc-channel = "0.18"
shellexpand = { version = "3.1.1", features = ["tilde"] }
addr2line = "0.25"
gimli = "0.32"
open = "5.3.2"
tabled = "0.17"
shell-words = "1.1.0"
rmp-serde = "1.3.0"
test-log = "0.2.19"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17.0"

[dev-dependencies]
temp-env = { version = "0.3.6", features = ["async_closure"] }
insta = { version = "1.29.0", features = ["json", "redactions"] }
test-with = { version = "0.15", default-features = false, features = [] }
rstest = { version = "0.25.0", default-features = false }
rstest_reuse = "0.7.0"
shell-quote = "0.7.2"

[workspace]
members = ["crates/runner-shared", "crates/memtrack", "crates/codspeed-bpf", "crates/exectrack"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
log = "0.4.28"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
ipc-channel = "0.18"
itertools = "0.14.0"
env_logger = "0.11.8"

[workspace.metadata.release]
sign-tag = true
sign-commit = true
shared-version = true
pre-release-hook = ["./scripts/pre-release.sh", "v{{version}}"]
pre-release-commit-message = "chore: Release runner version {{version}} 🎉"

[profile.dist]
inherits = "release"
lto = "thin"
strip = true

[package.metadata.dist]
targets = ["aarch64-unknown-linux-musl", "x86_64-unknown-linux-musl"]

# Config for 'dist'
[workspace.metadata.dist]
# Whether to consider the binaries in a package for distribution (defaults true)
dist = true
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.4"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Which actions to run on pull requests
pr-run-mode = "upload"
# Post-announce jobs to run in CI
post-announce-jobs = ["./bump-action"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
precise-builds = true

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-musl = "buildjet-2vcpu-ubuntu-2204-arm"
