[package]
name = "codspeed-runner"
version = "4.8.2"
edition = "2024"
repository = "https://github.com/CodSpeedHQ/runner"
publish = false

[[bin]]
name = "codspeed"
path = "src/main.rs"


[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["env", "color"] }
itertools = { workspace = true }
lazy_static = "1.4.0"
log = { workspace = true }
rand = "0.8.5"
rayon = "1.10"
regex = "1.10.2"
semver = "1.0"
reqwest = { version = "0.11.22", features = [
    "json",
    "stream",
    "native-tls-vendored",
] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
url = "2.4.1"
sha256 = "1.4.0"
tokio = { version = "1", features = ["macros", "rt"] }
tokio-tar = "0.3.1"
tokio-util = "0.7.16"
md5 = "0.7.0"
base64 = "0.21.0"
async-compression = { version = "0.4.5", features = ["tokio", "gzip"] }
simplelog = { version = "0.12.1", default-features = false, features = [
    "termcolor",
] }
tempfile = { workspace = true }
git2 = "0.20.2"
nestify = "0.3.3"
gql_client = { git = "https://github.com/CodSpeedHQ/gql-client-rs" }
serde_yaml = "0.9.34"
sysinfo = { version = "0.33.1", features = ["serde"] }
indicatif = "0.17.8"
console = "0.15.8"
async-trait = "0.1.82"
libc = { workspace = true }
bincode = "1.3.3"
object = "0.36.7"
linux-perf-data = { git = "https://github.com/CodSpeedHQ/linux-perf-data.git", rev = "e8c0ed51c2762b660708f8086e76a28449ef976c", features = [
    "zstd",
] } # feat: support zstd compressed records
debugid = "0.8.0"
memmap2 = "0.9.5"
nix = { version = "0.29.0", features = ["fs", "time", "user"] }
futures = "0.3.31"
runner-shared = { path = "crates/runner-shared" }
memtrack = { path = "crates/memtrack", default-features = false }
exec-harness = { path = "crates/exec-harness" }
ipc-channel = "0.18"
shellexpand = { version = "3.1.1", features = ["tilde"] }
addr2line = "0.25"
gimli = "0.32"
open = "5.3.2"
tabled = "0.17"
shell-words = "1.1.0"
rmp-serde = "1.3.0"
test-log = "0.2.19"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17.0"

[dev-dependencies]
temp-env = { version = "0.3.6", features = ["async_closure"] }
insta = { version = "1.29.0", features = ["json", "redactions"] }
test-with = { version = "0.15", default-features = false, features = [] }
rstest = { version = "0.25.0", default-features = false }
rstest_reuse = "0.7.0"
shell-quote = "0.7.2"

[workspace]
members = ["crates/runner-shared", "crates/memtrack", "crates/exec-harness"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
libc = "0.2"
log = "0.4.28"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
ipc-channel = "0.18"
itertools = "0.14.0"
env_logger = "0.11.8"
tempfile = "3.10.0"
object = { version = "0.36", default-features = false, features = [
    "read_core",
    "elf",
] }

[workspace.metadata.release]
sign-tag = true
sign-commit = true
shared-version = false
consolidate-commits = false
pre-release-commit-message = "chore: Release {{crate_name}} version {{version}} 🎉"

[package.metadata.release]
pre-release-hook = ["./scripts/pre-release.sh", "v{{version}}"]

[profile.dist]
inherits = "release"
lto = "thin"
strip = true

[package.metadata.dist]
targets = ["aarch64-unknown-linux-musl", "x86_64-unknown-linux-musl"]
