[package]
name = "exec-harness"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/CodSpeedHQ/codspeed"
publish = false

[[bin]]
name = "exec-harness"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
codspeed = "4.2.0"
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
humantime = "2.1"
runner-shared = { path = "../runner-shared" }
tempfile = { workspace = true }
object = { workspace = true }

[build-dependencies]
cargo_metadata = "0.19"
cc = "1"

[package.metadata.dist]
targets = ["aarch64-unknown-linux-gnu", "x86_64-unknown-linux-gnu"]
