[package]
name = "exec-harness"
version = "1.1.0"
edition = "2024"
repository = "https://github.com/CodSpeedHQ/codspeed"
publish = false

[[bin]]
name = "exec-harness"
path = "src/main.rs"

[dependencies]
instrument-hooks-bindings = { path = "../instrument-hooks-bindings" }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
humantime = "2.1"
runner-shared = { path = "../runner-shared" }
tempfile = { workspace = true }
object = { workspace = true }

[build-dependencies]
cc = "1"

[package.metadata.dist]
targets = ["aarch64-unknown-linux-gnu", "x86_64-unknown-linux-gnu"]
