[package]
name = "heaptrack"
version = "0.1.0"
edition = "2024"

[lib]
name = "heaptrack"
path = "src/lib.rs"

[[bin]]
name = "codspeed-heaptrack"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
libbpf-rs = "0.25.0"
log = "0.4.28"
env_logger = "0.11.8"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
libbpf-cargo = "0.25.0"
bindgen = "0.71"
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git" }

[dev-dependencies]
tempfile = "3.8"
rstest = "0.21"
