[package]
name = "memtrack"
version = "1.2.1"
edition = "2024"
repository = "https://github.com/CodSpeedHQ/codspeed"
publish = false

[lib]
name = "memtrack"
path = "src/lib.rs"

[[bin]]
name = "codspeed-memtrack"
path = "src/main.rs"
required-features = ["ebpf"]

[features]
default = ["ebpf"]
ebpf = ["dep:libbpf-rs", "dep:libbpf-cargo", "dep:vmlinux"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
runner-shared = { path = "../runner-shared" }
ipc-channel = { workspace = true }
static_assertions = "1.1"
itertools = { workspace = true }
paste = "1.0"
libbpf-rs = { version = "0.25.0", features = ["vendored"], optional = true }
glob = "0.3.3"
object = { workspace = true }

[build-dependencies]
libbpf-cargo = { version = "0.25.0", optional = true }
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "991dd4b8dfd8c9d62ce8999521b24f61d9b7fc52", optional = true }
bindgen = "0.71"

[dev-dependencies]
tempfile = { workspace = true }
rstest = "0.21"
test-log = "0.2"
insta = { version = "1.46.1", default-features = false }

[package.metadata.dist]
dist = true
installers = ["shell"]
targets = ["aarch64-unknown-linux-gnu", "x86_64-unknown-linux-gnu"]
features = ["libbpf-rs/static"]

[package.metadata.dist.dependencies.apt]
build-essential = "*"
pkgconf = "*"
zlib1g-dev = "*"
libbpf-dev = "*"

# Required for the vendored feature
autopoint = "*"
bison = "*"
flex = "*"
