[package]
name = "runner-shared"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
log = "0.4"
prost = "0.14.1"

[build-dependencies]
prost-build = "0.14.1"
protoc-bin-vendored = "3.2.0"
