[package]
name = "runner-shared"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"
itertools = { workspace = true }
log = { workspace = true }
rmp = "0.8.14"
rmp-serde = "1.3.0"
libc = { workspace = true }
zstd = "0.13"

[dev-dependencies]
divan = { version = "4.2.0", package = "codspeed-divan-compat" }
rand = "0.8"

[[bench]]
name = "memtrack_writer"
harness = false
