[workspace]

[package]
name = "alloc_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alloc_rust"
path = "src/main.rs"

[dependencies]
jemallocator = { version = "0.5", optional = true }
mimalloc = { version = "0.1", optional = true }

[features]
default = []
with-jemalloc = ["jemallocator"]
with-mimalloc = ["mimalloc"]
